@startuml US09-CD
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
skinparam classAttributeIconSize 0

class ConsultIntegratedSituationUI {
}

class ConsultIntegratedSituationController {
    + ConsultIntegratedSituationController()
    + getPoliticalAgents() : List<PoliticalAgentDTO>
    + getIntegratedSituation(agentDto, referenceDate) : List<DeclarationDTO>
}

class PoliticalAgentDTO {
    - name : String
    - email : String
}

class DeclarationDTO {
    - id : String
    - type : String
    - submissionDate : Date
    - status : String
    - summary : String
    - details : String
    - positions : List<String>
    - incomes : List<String>
    - subsidies : List<String>
    - assets : List<String>
    - businessParticipations : List<String>
    - totalIncome : double
}

class PoliticalAgentMapper {
    + toDTO(agent) : PoliticalAgentDTO
    + toDTO(agents) : List<PoliticalAgentDTO>
}

class DeclarationMapper {
    + toDTO(declaration) : DeclarationDTO
    + toDTO(declarations) : List<DeclarationDTO>
}

class Repositories <<Singleton>> {
    - {static} instance : Repositories
    - Repositories()
    + {static} getInstance() : Repositories
    + getPoliticalAgentRepository() : PoliticalAgentRepository
    + getDeclarationRepository() : DeclarationRepository
}

class PoliticalAgentRepository {
    + getAll() : List<PoliticalAgent>
    + getByEmail(email) : PoliticalAgent
}

class DeclarationRepository {
    + getValidatedDeclarationsForAgentUpTo(agent, referenceDate) : List<Declaration>
}

class PoliticalAgent {
    - name
    - email
    - nationalIdentityCard
    - taxIdentificationNumber
}

class "Declaration of Interests" as Declaration {
    - id
    - submissionDate
    - status
    - type
    + getPositionEntries()
    + getIncomes()
    + getSubsidyEntries()
    + getAssetEntries()
    + getBusinessParticipations()
}

enum DeclarationStatus <<enumeration>> {
    PENDING
    VALIDATED
    REJECTED
}

enum DeclarationType <<enumeration>> {
    INITIAL
    REGULAR
    EXCEPTIONAL
}

class PositionEntry {
    - functionDesignation
    - nature
    - grossSalary
    - sideIncomeConsulting
    - sideIncomeBoardMemberships
    - startDate
    - endDate
}

class Income {
    - amount
    - source
    - date
}

class SubsidyEntry {
    - amount
    - description
    - date
}

class AssetEntry {
    - assetType
    - assetValue
}

class BusinessParticipation {
    - companyNIF
    - totalValueInStocks
    - companyPercentage
}

ConsultIntegratedSituationUI .> ConsultIntegratedSituationController

ConsultIntegratedSituationController ..> Repositories
Repositories *-- PoliticalAgentRepository
Repositories *-- DeclarationRepository
ConsultIntegratedSituationController ..> PoliticalAgentRepository
ConsultIntegratedSituationController ..> DeclarationRepository
ConsultIntegratedSituationController ..> PoliticalAgent
ConsultIntegratedSituationController ..> Declaration

ConsultIntegratedSituationUI ..> PoliticalAgentDTO
ConsultIntegratedSituationUI ..> DeclarationDTO

ConsultIntegratedSituationController ..> PoliticalAgentMapper
ConsultIntegratedSituationController ..> DeclarationMapper
PoliticalAgentMapper ..> PoliticalAgent
PoliticalAgentMapper ..> PoliticalAgentDTO
DeclarationMapper ..> Declaration
DeclarationMapper ..> DeclarationDTO

PoliticalAgentRepository --> "*" PoliticalAgent : agents
DeclarationRepository --> "*" Declaration : declarations

PoliticalAgent "1" -- "*" Declaration : submits >
Declaration "*" -- "1" DeclarationStatus : has >
Declaration "*" -- "1" DeclarationType : has >
Declaration "1" *-- "*" PositionEntry : holds >
Declaration "1" *-- "*" Income : includes >
Declaration "1" *-- "*" SubsidyEntry : includes >
Declaration "1" *-- "*" AssetEntry : declares >
Declaration "1" *-- "*" BusinessParticipation : declares >

note bottom of DeclarationRepository
    AC2: returns only declarations with
    status = VALIDATED and
    submissionDate <= referenceDate
end note

note right of ConsultIntegratedSituationController
    getIntegratedSituation validates inputs (throws
    IllegalArgumentException if agentDto or referenceDate
    is null), resolves the agent by email via
    getByEmail, and returns DTOs built by the
    DeclarationMapper (DTO pattern), so the UI never
    touches domain objects.
end note

@enduml
